# CloudAI

./: .gitignore  README.md  pyproject.toml
configs/app/: default.yaml
configs/dataset/: default.yaml  web_sample.yaml
configs/features/: v1.yaml
configs/models/: baseline.yaml  deep_cnn.yaml  deep_cnn_gradcam.yaml  hybrid.yaml  ranking.yaml
data/processed/: aggregated_labels.parquet  image_manifest.parquet  ratings.parquet
data/processed/features/: features_v1.parquet
data/raw/metadata/: web_sample_metadata.csv  web_sample_metadata.parquet
notebooks/: 01_eda_labels.ipynb  02_feature_sanity.ipynb  03_embedding_space.ipynb
src/cloud_aesthetics/: __init__.py  cli.py  settings.py  standalone.py
src/cloud_aesthetics/app/: Home.py  common.py
src/cloud_aesthetics/data/: aggregation.py  exclusions.py  manifest.py  pairwise.py  ratings.py  schemas.py  splits.py  web_dataset.py
src/cloud_aesthetics/eval/: ablation.py  analysis.py  calibration.py  metrics.py  neighbors.py
src/cloud_aesthetics/explain/: concepts.py  feature_importance.py  heatmaps.py  regions.py  text_report.py
src/cloud_aesthetics/features/: base.py  color.py  composition.py  concept_bootstrap.py  store.py  texture.py
src/cloud_aesthetics/models/: base.py  baseline.py  deep.py  hybrid.py  ranking.py  uncertainty.py
src/cloud_aesthetics/preprocessing/: datasets.py  (+3 more)
tests/: test_aggregation.py  test_batch_analysis.py  test_exclusions.py  test_explanations_smoke.py  test_feature_extractors.py  test_importer.py  test_schemas.py  test_splits.py  test_standalone.py  test_training_smoke.py
(+9 files in other folders)
